apps/media/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: radarr
    part-of: media
  name: radarr
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      part-of: media
  template:
    metadata:
      labels:
        app: radarr
        part-of: media
    spec:
      containers:
        - image: linuxserver/radarr:5.25.0
          name: radarr
          volumeMounts:
            - mountPath: /config
              name: radarr-config
            - mountPath: /movies
              name: movies
            - mountPath: /downloads
              name: downloads
          ports:
            - name: radarr
              containerPort: 7878
              protocol: TCP
      volumes:
        - name: movies
          persistentVolumeClaim:
            claimName: movies
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: arr-init-config
          configMap:
            name: arr-init-config
        - name: radarr-config
          persistentVolumeClaim:
            claimName: media-radarr-config
      restartPolicy: Always
