apps/media/radarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.lab.8none1.com`)
      kind: Rule
      services:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik # Specify the namespace of the service
          port: 9000 # Specify the target port
  tls:
    secretName: radarr-ingress-tls
